--- a/english.html
+++ b/english.html
@@ -9100,7 +9100,7 @@ Error message and password prompt
 <div created="20161026202658363" creator="b" modified="20161026202700307" modifier="b" title="$:/status/UserName">
 <pre></pre>
 </div>
-<div list="[[Ran Yagil]] [[Draft of 'Wes Anderson']] [[Coen Sisters]]" title="$:/StoryList">
+<div list="Meals [[Wes Anderson]] [[Coen Sisters]]" title="$:/StoryList">
 <pre></pre>
 </div>
 <div plugin-type="info" title="$:/temp/info-plugin" type="application/json">
@@ -9120,7 +9120,7 @@ Error message and password prompt
 <div created="20161026143719829" modified="20161026143722391" title="$:/temp/RemoteAssetSearch/$:/config/OfficialPluginLibrary">
 <pre>powered</pre>
 </div>
-<div created="20161023184814872" modified="20200411144045293" title="$:/temp/search">
+<div created="20161023184814872" modified="20200412090759906" title="$:/temp/search">
 <pre></pre>
 </div>
 <div created="20161026143331446" modified="20161026143331446" tags="$:/tags/ServerConnection" title="$:/temp/ServerConnection/http://tiddlywiki.com/library/v5.1.13/index.html" url="http://tiddlywiki.com/library/v5.1.13/index.html">
@@ -12529,7 +12529,7 @@ And tea is for the sicken ones.
 
 </pre>
 </div>
-<div created="20200213154636920" modified="20200410101937212" tags="Kitchens [[How many songs can you even invent at all]] [[Food addicts]]" title="Meals">
+<div created="20200213154636920" modified="20200412092038659" tags="Kitchens [[How many songs can you even invent at all]] [[Food addicts]] [[True stories]] [[Corona beings]]" title="Meals">
 <pre>[img[pictures/aruchot.jpg]]
 
 
@@ -12537,7 +12537,7 @@ And tea is for the sicken ones.
 
 At [[the Bauman family|The Baumans]] there were meals all the time. When I still looked up to [[Nadia]], my older sister, she trained me to maintain a neat kitchen, organizing and cleaning were [[top priority|Cleaning properly]], those were the things that [[my mother|RIP Dina]] paid extra attention to. Eventually I met [[Eva|Eva Cohen]], and later [[Genevieve]] and [[Sonia]]- who taught me the professional work at the kitchen. 
 
-I love the harmony between the food species in a meal, and most important, a meal should be tasty, fun, happy and loud. 
+I love the harmony between the food species in a meal, and most important, a meal should be [[tasty, fun, happy and loud|https://www.youtube.com/watch?v=LzOhLNDRLNA]]. 
 
 
 
