--- a/index.html
+++ b/index.html
@@ -9213,7 +9213,7 @@ Error message and password prompt
 <div created="20161026202658363" creator="b" modified="20161026202700307" modifier="b" title="$:/status/UserName">
 <pre></pre>
 </div>
-<div list="[[לחמים בקורונה]] [[האחיות כהן]]" title="$:/StoryList">
+<div list="ארוחות [[לחמים בקורונה]] [[וס אנדרסון]] [[האחיות כהן]]" title="$:/StoryList">
 <pre></pre>
 </div>
 <div plugin-type="info" title="$:/temp/info-plugin" type="application/json">
@@ -9233,7 +9233,7 @@ Error message and password prompt
 <div created="20161026143719829" modified="20161026143722391" title="$:/temp/RemoteAssetSearch/$:/config/OfficialPluginLibrary">
 <pre>powered</pre>
 </div>
-<div created="20161023184814872" modified="20200411144121610" title="$:/temp/search">
+<div created="20161023184814872" modified="20200412090608900" title="$:/temp/search">
 <pre></pre>
 </div>
 <div created="20161026143331446" modified="20161026143331446" tags="$:/tags/ServerConnection" title="$:/temp/ServerConnection/http://tiddlywiki.com/library/v5.1.13/index.html" url="http://tiddlywiki.com/library/v5.1.13/index.html">
@@ -10664,14 +10664,14 @@ Sunny one so true, I love you.//
 &lt;&lt;englink [[Baking]]&gt;&gt;
 </pre>
 </div>
-<div created="20180128153940319" modified="20200215174403848" tags="[[חיות אוכל]] מטבחים [[כמה שירים כבר אפשר להמציא בכלל]]" title="ארוחות">
+<div created="20180128153940319" modified="20200412092008840" tags="[[חיות אוכל]] מטבחים [[כמה שירים כבר אפשר להמציא בכלל]] [[הלכות קורונה]]" title="ארוחות">
 <pre>[img[pictures/aruchot.jpg]]
 
 !!![[יויו]]:
 
 אצל [[משפחת באומן]] תמיד היו ארוחות. כשעיני עוד היו נשואות אל [[נדיה]], אחותי הבכורה, היא הכשירה אותי לעבודת מטבח נקייה כשבראש הרשימה [[סדר ונקיון|מנקים היטב]], אליהם [[אימי|דינה זכרה לברכה]] הייתה כה רגישה. לימים פגשתי את [[אווה|אווה כהן]] ואחר כך את [[ז'נבייב]] ואת [[סוניה]] - אשר לימדו אותי  את העבודה המקצועית במטבח. 
 
-אני אוהב שבארוחה תהיה הרמוניה בין מיני המזון, ושהכי חשוב שיהיה טעים, כייף, שמח ורועש.
+אני אוהב שבארוחה תהיה הרמוניה בין מיני המזון, ושהכי חשוב שיהיה [[טעים, כייף, שמח ורועש|https://www.youtube.com/watch?v=LzOhLNDRLNA]].
 
 &lt;&lt;list-links filter:&quot;[tag[ארוחות]]&quot;&gt;&gt;
 
