--- a/english.html
+++ b/english.html
@@ -9100,7 +9100,7 @@ Error message and password prompt
 <div created="20161026202658363" creator="b" modified="20161026202700307" modifier="b" title="$:/status/UserName">
 <pre></pre>
 </div>
-<div list="Meals [[Wes Anderson]] [[Coen Sisters]]" title="$:/StoryList">
+<div list="[[Coen Sisters]]" title="$:/StoryList">
 <pre></pre>
 </div>
 <div plugin-type="info" title="$:/temp/info-plugin" type="application/json">
@@ -9120,7 +9120,7 @@ Error message and password prompt
 <div created="20161026143719829" modified="20161026143722391" title="$:/temp/RemoteAssetSearch/$:/config/OfficialPluginLibrary">
 <pre>powered</pre>
 </div>
-<div created="20161023184814872" modified="20200412090759906" title="$:/temp/search">
+<div created="20161023184814872" modified="20200415114230934" title="$:/temp/search">
 <pre></pre>
 </div>
 <div created="20161026143331446" modified="20161026143331446" tags="$:/tags/ServerConnection" title="$:/temp/ServerConnection/http://tiddlywiki.com/library/v5.1.13/index.html" url="http://tiddlywiki.com/library/v5.1.13/index.html">
@@ -11225,8 +11225,8 @@ She's one of the lucky fellows who were raised together in a group, who came fro
 
 </pre>
 </div>
-<div created="20200202161830591" modified="20200223190436486" tags="[[Coen sister]] Laundry [[The Baumans]] [[The archive's trustees]] [[Iry and Gura]]" title="Gura">
-<pre>[img[pictures/VOYeMadgknrTKN6D.jpg]]
+<div created="20200202161830591" modified="20200415114226215" tags="[[Coen sister]] Laundry [[The Baumans]] [[The archive's trustees]] [[Iry and Gura]]" title="Gura">
+<pre>[img[pictures/gura.jpg]]
 
 !!![[Yoyo]]:
 
