--- a/index.html
+++ b/index.html
@@ -9213,7 +9213,7 @@ Error message and password prompt
 <div created="20161026202658363" creator="b" modified="20161026202700307" modifier="b" title="$:/status/UserName">
 <pre></pre>
 </div>
-<div list="ארוחות [[לחמים בקורונה]] [[וס אנדרסון]] [[האחיות כהן]]" title="$:/StoryList">
+<div list="[[האחיות כהן]]" title="$:/StoryList">
 <pre></pre>
 </div>
 <div plugin-type="info" title="$:/temp/info-plugin" type="application/json">
@@ -9233,7 +9233,7 @@ Error message and password prompt
 <div created="20161026143719829" modified="20161026143722391" title="$:/temp/RemoteAssetSearch/$:/config/OfficialPluginLibrary">
 <pre>powered</pre>
 </div>
-<div created="20161023184814872" modified="20200412090608900" title="$:/temp/search">
+<div created="20161023184814872" modified="20200415114124793" title="$:/temp/search">
 <pre></pre>
 </div>
 <div created="20161026143331446" modified="20161026143331446" tags="$:/tags/ServerConnection" title="$:/temp/ServerConnection/http://tiddlywiki.com/library/v5.1.13/index.html" url="http://tiddlywiki.com/library/v5.1.13/index.html">
@@ -11265,8 +11265,8 @@ Is where I want to be
 
 </pre>
 </div>
-<div created="20161026214951927" modified="20200223190355833" tags="[[נאמני הגנזך]] [[אחות כהן]] [[משפחת באומן]] כביסה [[אירי וגורה]] [[מחפשת את אירי]]" title="גורה">
-<pre>[img[pictures/VOYeMadgknrTKN6D.jpg]]
+<div created="20161026214951927" modified="20200415114153020" tags="[[נאמני הגנזך]] [[אחות כהן]] [[משפחת באומן]] כביסה [[אירי וגורה]] [[מחפשת את אירי]]" title="גורה">
+<pre>[img[pictures/gura.jpg]]
 
 !!![[יויו]]:
 
@@ -16833,7 +16833,7 @@ We rise to play a greater part.
 
 </pre>
 </div>
-<div created="20200318190000717" modified="20200330164708142" tags="[[בדרך לאן שהוא]] סדרות טלוויזיה סרטים [[הכפר הגלובלי]] [[הלכות קורונה]]" title="סגירים">
+<div created="20200318190000717" modified="20200415114114195" tags="[[בדרך לאן שהוא]] סדרות טלוויזיה סרטים [[הכפר הגלובלי]] [[הלכות קורונה]]" title="סגירים">
 <pre>[img[pictures/closers.jpg]]
 
 !!![[גורה]]:
