--- a/english.html
+++ b/english.html
@@ -529,6 +529,8 @@ Error message and password prompt
 
 <li>Gili's kiosk</li>
 
+<li>Grape leaves</li>
+
 <li>Gratitude for the sun</li>
 
 <li>Graziani</li>
@@ -11146,6 +11148,18 @@ Gigi is part of The [[Emin Society|https://en.wikipedia.org/wiki/Emin_(esoteric_
 
  &lt;&lt;heblink [[הקיוסק של גילי]]&gt;&gt;</pre>
 </div>
+<div created="20200417171759725" modified="20200417171947567" tags="Recipes [[Vegan recipes]] [[Food addicts]] [[Here in the Ghetto]] [[Corona beings]]" title="Grape leaves">
+<pre>
+[img[pictures/aley-gefen.jpg]]
+
+
+
+
+
+ &lt;&lt;heblink [[עלי גפן]]&gt;&gt;
+
+</pre>
+</div>
 <div created="20200307181155676" modified="20200330165930487" tags="[[Iry claims]] [[The global village]] [[Palms of the hands]]" title="Gratitude for the sun">
 <pre>[img[pictures/birkat-hashemesh.jpg]]
 
@@ -12529,7 +12543,7 @@ And tea is for the sicken ones.
 
 </pre>
 </div>
-<div created="20200213154636920" modified="20200412092038659" tags="Kitchens [[How many songs can you even invent at all]] [[Food addicts]] [[True stories]] [[Corona beings]]" title="Meals">
+<div created="20200213154636920" modified="20200417171856637" tags="Kitchens [[How many songs can you even invent at all]] [[Food addicts]] [[True stories]] [[Corona beings]]" title="Meals">
 <pre>[img[pictures/aruchot.jpg]]
 
 
