--- a/index.html
+++ b/index.html
@@ -1165,6 +1165,8 @@ Error message and password prompt
 
 <li>על הספקטרום</li>
 
+<li>עלי גפן</li>
+
 <li>עם הפנים החוצה</li>
 
 <li>עם יויו באמסטרדם</li>
@@ -9213,7 +9215,7 @@ Error message and password prompt
 <div created="20161026202658363" creator="b" modified="20161026202700307" modifier="b" title="$:/status/UserName">
 <pre></pre>
 </div>
-<div list="[[האחיות כהן]]" title="$:/StoryList">
+<div list="[[עלי גפן]] גורה [[האחיות כהן]]" title="$:/StoryList">
 <pre></pre>
 </div>
 <div plugin-type="info" title="$:/temp/info-plugin" type="application/json">
@@ -10664,7 +10666,7 @@ Sunny one so true, I love you.//
 &lt;&lt;englink [[Baking]]&gt;&gt;
 </pre>
 </div>
-<div created="20180128153940319" modified="20200412092008840" tags="[[חיות אוכל]] מטבחים [[כמה שירים כבר אפשר להמציא בכלל]] [[הלכות קורונה]]" title="ארוחות">
+<div created="20180128153940319" modified="20200417172014488" tags="[[חיות אוכל]] מטבחים [[כמה שירים כבר אפשר להמציא בכלל]] [[הלכות קורונה]]" title="ארוחות">
 <pre>[img[pictures/aruchot.jpg]]
 
 !!![[יויו]]:
@@ -17761,6 +17763,16 @@ __אופן ההכנה:__
 
 
 &lt;&lt;englink [[On the spectrum]]&gt;&gt;
+</pre>
+</div>
+<div created="20200417165302560" modified="20200417172043084" tags="מתכונים [[מתכונים טבעוניים]] [[הלכות קורונה]] [[כאן בגטו]] [[חיות אוכל]]" title="עלי גפן">
+<pre>
+[img[pictures/aley-gefen.jpg]]
+
+
+
+
+&lt;&lt;englink [[Grape leaves]]&gt;&gt;
 </pre>
 </div>
 <div created="20170628145012336" modified="20200324164429742" tags="[[אירי טוענת]] [[הכפר הגלובלי]] סגירים [[האנקי דורי]]" title="עם הפנים החוצה">
