muznach plus belinda

--- a/english.html
+++ b/english.html
@@ -317,6 +317,8 @@ Error message and password prompt
 
 <li>Béchamel sauce</li>
 
+<li>Belinda</li>
+
 <li>Berry Sakharof</li>
 
 <li>Beta VeGriga</li>
@@ -1118,6 +1120,8 @@ Error message and password prompt
 <li>TV Series</li>
 
 <li>Umbrella car</li>
+
+<li>Untidy is the new well-groomed</li>
 
 <li>Urban Nature</li>
 
@@ -9102,7 +9106,7 @@ Error message and password prompt
 <div created="20161026202658363" creator="b" modified="20161026202700307" modifier="b" title="$:/status/UserName">
 <pre></pre>
 </div>
-<div list="[[Coen Sisters]]" title="$:/StoryList">
+<div list="[[From Eyal Shani's kitchen]] [[Coen Sisters]]" title="$:/StoryList">
 <pre></pre>
 </div>
 <div plugin-type="info" title="$:/temp/info-plugin" type="application/json">
@@ -9122,7 +9126,7 @@ Error message and password prompt
 <div created="20161026143719829" modified="20161026143722391" title="$:/temp/RemoteAssetSearch/$:/config/OfficialPluginLibrary">
 <pre>powered</pre>
 </div>
-<div created="20161023184814872" modified="20200415114230934" title="$:/temp/search">
+<div created="20161023184814872" modified="20200420175713860" title="$:/temp/search">
 <pre></pre>
 </div>
 <div created="20161026143331446" modified="20161026143331446" tags="$:/tags/ServerConnection" title="$:/temp/ServerConnection/http://tiddlywiki.com/library/v5.1.13/index.html" url="http://tiddlywiki.com/library/v5.1.13/index.html">
@@ -9727,6 +9731,16 @@ Beautiful Ahal is the beautiful [[Ahal Eden|https://www.instagram.com/ahaleden/]
 
 
  &lt;&lt;heblink [[רוטב בשאמל]]&gt;&gt;</pre>
+</div>
+<div created="20200420141235022" modified="20200420142037825" tags="[[Here in the Ghetto]] [[Corona beings]]" title="Belinda">
+<pre>
+[img[pictures/belinda.jpg]]
+
+
+
+
+
+ &lt;&lt;heblink [[בלינדה]]&gt;&gt;</pre>
 </div>
 <div created="20191113143329168" modified="20200324165652967" tags="music [[outer sisters]] [[Hunky Dory]]" title="Berry Sakharof">
 <pre>[img[pictures/berry-sakharof.jpg]]
@@ -10983,7 +10997,7 @@ In the moment I saw sweet [[Angelic]] she looked beautiful to me, but I was sure
  &lt;&lt;heblink [[חיות אוכל]]&gt;&gt;
 </pre>
 </div>
-<div created="20200406153134488" modified="20200409090723268" tags="Kitchens [[Here in the Ghetto]] Houses [[Food addicts]] [[Outer sisters]] TV" title="From Eyal Shani's kitchen">
+<div created="20200406153134488" modified="20200420175935991" tags="Kitchens [[Here in the Ghetto]] Houses [[Food addicts]] [[Outer sisters]] TV" title="From Eyal Shani's kitchen">
 <pre>[img[pictures/eyal-shani.jpg]]
 
 
@@ -10992,7 +11006,7 @@ In the moment I saw sweet [[Angelic]] she looked beautiful to me, but I was sure
 
 The corona times have brought about a new routine to the tribal campfire, such as the TV show in which every day a different chef cooks from his own kitchen. 
 
-[[Eyal Shani’s|https://en.wikipedia.org/wiki/Eyal_Shani]] kitchen is right [[here in the ghetto|Here in the Ghetto]], it has charm and a window with a tree. In live broadcast he is walking around the kitchen while a photographer with a kind and loving eye captures him. Eyal moves to the side or waits when the photographer is standing in his way because he just has to film whatever is bubbling on the stove. “The corona has made us forget other enemies.” He is thinking aloud while he washes vegetables and the editor is speaking to him through an earpiece. When you come to describe Eyal Shani you come up with elegant words and big pictures, because Eyal is such a character that in the same seriousness and drama, a chocolate cake is [[being mixed|Palms of the hands]], spinach is talked about as being melted on to its own self or the cooking and baking processes of various materials are being explained wisely and generously. 
+[[Eyal Shani’s|https://en.wikipedia.org/wiki/Eyal_Shani]] kitchen is right [[here in the ghetto|Here in the Ghetto]], it has charm and a window with a tree. In live broadcast he is walking around the kitchen while a photographer with a kind and loving eye captures him. Eyal moves to the side or waits when the photographer is standing in his way because he just has to film whatever is bubbling on the stove. “The corona made other enemies seem less significant”, He is thinking aloud while he washes vegetables and the editor is speaking to him through an earpiece. When you come to describe Eyal Shani you come up with elegant words and big pictures, because Eyal is such a character that in the same seriousness and drama, a chocolate cake is [[being mixed|Palms of the hands]], spinach is talked about as being melted on to its own self or the cooking and baking processes of various materials are being explained wisely and generously. 
 
 
 
@@ -11149,8 +11163,7 @@ Gigi is part of The [[Emin Society|https://en.wikipedia.org/wiki/Emin_(esoteric_
  &lt;&lt;heblink [[הקיוסק של גילי]]&gt;&gt;</pre>
 </div>
 <div created="20200417171759725" modified="20200417171947567" tags="Recipes [[Vegan recipes]] [[Food addicts]] [[Here in the Ghetto]] [[Corona beings]]" title="Grape leaves">
-<pre>
-[img[pictures/aley-gefen.jpg]]
+<pre>[img[pictures/aley-gefen.jpg]]
 
 
 
@@ -12543,7 +12556,7 @@ And tea is for the sicken ones.
 
 </pre>
 </div>
-<div created="20200213154636920" modified="20200417171856637" tags="Kitchens [[How many songs can you even invent at all]] [[Food addicts]] [[True stories]] [[Corona beings]]" title="Meals">
+<div created="20200213154636920" modified="20200420173849995" tags="Kitchens [[How many songs can you even invent at all]] [[Food addicts]] [[True stories]] [[Corona beings]]" title="Meals">
 <pre>[img[pictures/aruchot.jpg]]
 
 
@@ -14934,6 +14947,16 @@ After searching for a while, there comes a time when [[Leonard|https://www.imdb.
 
 
  &lt;&lt;heblink [[אוטו מטריה]]&gt;&gt;
+</pre>
+</div>
+<div created="20200420173740515" modified="20200420173930056" tags="[[Menopause sisters]] [[True stories]]" title="Untidy is the new well-groomed">
+<pre>
+[img[pictures/muznach.jpg]]
+
+
+
+
+ &lt;&lt;heblink [[מוזנח זה המטופח החדש]]&gt;&gt;
 </pre>
 </div>
 <div created="20200226064334395" modified="20200226064504279" tags="[[Here in the Ghetto]] Music [[True stories]]" title="Urban Nature">
