--- a/index.html
+++ b/index.html
@@ -425,6 +425,8 @@ Error message and password prompt
 
 <li>בית האננס ההוואי של אירי</li>
 
+<li>בלינדה</li>
+
 <li>בצק פריך</li>
 
 <li>ברי סחרוף</li>
@@ -988,6 +990,8 @@ Error message and password prompt
 <li>מהמטבח של אייל שני</li>
 
 <li>מוזיקה</li>
+
+<li>מוזנח זה המטופח החדש</li>
 
 <li>מוכרת הדיסקים/dj</li>
 
@@ -9215,7 +9219,7 @@ Error message and password prompt
 <div created="20161026202658363" creator="b" modified="20161026202700307" modifier="b" title="$:/status/UserName">
 <pre></pre>
 </div>
-<div list="[[עלי גפן]] גורה [[האחיות כהן]]" title="$:/StoryList">
+<div list="בלינדה [[מוזנח זה המטופח החדש]] [[האחיות כהן]]" title="$:/StoryList">
 <pre></pre>
 </div>
 <div plugin-type="info" title="$:/temp/info-plugin" type="application/json">
@@ -9235,7 +9239,7 @@ Error message and password prompt
 <div created="20161026143719829" modified="20161026143722391" title="$:/temp/RemoteAssetSearch/$:/config/OfficialPluginLibrary">
 <pre>powered</pre>
 </div>
-<div created="20161023184814872" modified="20200415114124793" title="$:/temp/search">
+<div created="20161023184814872" modified="20200420142246089" title="$:/temp/search">
 <pre></pre>
 </div>
 <div created="20161026143331446" modified="20161026143331446" tags="$:/tags/ServerConnection" title="$:/temp/ServerConnection/http://tiddlywiki.com/library/v5.1.13/index.html" url="http://tiddlywiki.com/library/v5.1.13/index.html">
@@ -10666,7 +10670,7 @@ Sunny one so true, I love you.//
 &lt;&lt;englink [[Baking]]&gt;&gt;
 </pre>
 </div>
-<div created="20180128153940319" modified="20200417172014488" tags="[[חיות אוכל]] מטבחים [[כמה שירים כבר אפשר להמציא בכלל]] [[הלכות קורונה]]" title="ארוחות">
+<div created="20180128153940319" modified="20200420173958700" tags="[[חיות אוכל]] מטבחים [[כמה שירים כבר אפשר להמציא בכלל]] [[הלכות קורונה]]" title="ארוחות">
 <pre>[img[pictures/aruchot.jpg]]
 
 !!![[יויו]]:
@@ -10919,6 +10923,20 @@ Is where I want to be
 
 
 &lt;&lt;englink [[Iry's Hawaiian pineapple house]]&gt;&gt;
+</pre>
+</div>
+<div created="20200420140758511" modified="20200420182153861" tags="[[כאן בגטו]] [[הלכות קורונה]] [[מטא בדיון]]" title="בלינדה">
+<pre>[img[pictures/belinda.jpg]]
+
+
+!!![[תומר]]:
+
+הבוקר כשהלכתי לקנות לחם החלטתי שאם [[בלינדה|https://belinda.co.il/]] פתחה סוף סוף את החנות, אקנה לננו את הכפכפים המתוקים שרציתי לקנות לה כשהתחילה הקורונה, והיא הייתה פתוחה ושמחנו להיפגש ודיברנו קצת על המצב תוך כדי שבחרתי ושילמתי. 
+
+
+
+
+&lt;&lt;englink [[Belinda]]&gt;&gt;
 </pre>
 </div>
 <div created="20170701112743899" modified="20200306135901890" tags="[[כשהם ישנים]] [[חיות אוכל]] מתכונים אפייה" title="בצק פריך">
@@ -15370,13 +15388,13 @@ We rise to play a greater part.
 
 &lt;&lt;englink [[Lehamim]]&gt;&gt;</pre>
 </div>
-<div created="20200410153607387" modified="20200410165602546" tags="[[כאן בגטו]] [[בתי קפה]] [[הלכות קורונה]] אפייה מטבחים" title="לחמים בקורונה">
+<div created="20200410153607387" modified="20200420142305394" tags="[[כאן בגטו]] [[בתי קפה]] [[הלכות קורונה]] אפייה מטבחים" title="לחמים בקורונה">
 <pre>[img[pictures/lehamim-bacorona.jpg]]
 
 
 !!![[תומר]]:
 
-בכל פעם שאני יורד למטה למשולש הקרוב בימים האלה, לבי מחסיר פעימה. [[הרחובות כמעט ריקים|https://www.youtube.com/watch?v=J6YLzuhIpSE]], אנשים עם מסכות וכפפות הולכים מהר וממעטים להסתכל לך בעיניים. אני זקוק לקשר הזה. אני ממשיך ורואה את הדלת המוגפת של בלינדה, נזכר בה ומתגעגע. עוד כמה פסיעות ואני בתור של [[לחמים]], שם עיניים מוכרות מאירות אלי. אני רוצה לצלם כדי לשלוח תמונה [[לגורה|גורה]] שתצייר, ומקבל המלצה להיכנס פנימה ולצלם את אזור בית הקפה, שהפך לבית אריזה מוקפד. מצלם אותו, שולח, מבקש מעובדי הדלפק, כי עכשיו אסור לקחת לבד, קינמונים וגביניות ולחמניות עם שומשום, משלם דרך הכפפות, לא יודע מה זה אומר לגבי נקיון כרטיס האשראי והארנק אליו הוא נכנס, ויוצא אל הרחוב הקר שוב.
+בכל פעם שאני יורד למטה למשולש הקרוב בימים האלה, לבי מחסיר פעימה. [[הרחובות כמעט ריקים|https://www.youtube.com/watch?v=J6YLzuhIpSE]], אנשים עם מסכות וכפפות הולכים מהר וממעטים להסתכל לך בעיניים. אני זקוק לקשר הזה. אני ממשיך ורואה את הדלת המוגפת של [[בלינדה]], נזכר בה ומתגעגע. עוד כמה פסיעות ואני בתור של [[לחמים]], שם עיניים מוכרות מאירות אלי. אני רוצה לצלם כדי לשלוח תמונה [[לגורה|גורה]] שתצייר, ומקבל המלצה להיכנס פנימה ולצלם את אזור בית הקפה, שהפך לבית אריזה מוקפד. מצלם אותו, שולח, מבקש מעובדי הדלפק, כי עכשיו אסור לקחת לבד, קינמונים וגביניות ולחמניות עם שומשום, משלם דרך הכפפות, לא יודע מה זה אומר לגבי נקיון כרטיס האשראי והארנק אליו הוא נכנס, ויוצא אל הרחוב הקר שוב.
 
 
 
@@ -16038,6 +16056,17 @@ We rise to play a greater part.
 
 
 </pre>
+</div>
+<div created="20200420172526029" modified="20200420182056451" tags="[[סיפורים אמיתיים]] [[האחיות בלות]]" title="מוזנח זה המטופח החדש">
+<pre>[img[pictures/muznach.jpg]]
+
+
+!!![[אימא של ג'אז]]:
+
+בקורונה הפסקתי לספור את השערות הכסופות המשתוללות, כי [[הספר|ככל הנראה]] סגור. גבות וכל השאר סגור. עכשיו צריכה לחכות פעימה או שתיים ואחרי שיפתחו את הפדיקור, אוכל לחדש את הכפכפים שקניתי אצל [[בלינדה]] 
+
+
+&lt;&lt;englink [[Untidy is the new well-groomed]]&gt;&gt;</pre>
 </div>
 <div created="20170318190608252" modified="20200308100044907" tags="HH מוזיקה [[כמה שירים כבר אפשר להמציא בכלל]]" title="מוכרת הדיסקים/dj">
 <pre>[img[pictures/dj-eva.jpg]]
@@ -17765,9 +17794,12 @@ __אופן ההכנה:__
 &lt;&lt;englink [[On the spectrum]]&gt;&gt;
 </pre>
 </div>
-<div created="20200417165302560" modified="20200417172043084" tags="מתכונים [[מתכונים טבעוניים]] [[הלכות קורונה]] [[כאן בגטו]] [[חיות אוכל]]" title="עלי גפן">
-<pre>
-[img[pictures/aley-gefen.jpg]]
+<div created="20200417165302560" modified="20200418144813466" tags="מתכונים [[מתכונים טבעוניים]] [[הלכות קורונה]] [[כאן בגטו]] [[חיות אוכל]]" title="עלי גפן">
+<pre>[img[pictures/aley-gefen.jpg]]
+
+!!![[תומר]]:
+
+בעוד אנו סגורים בדירתנו בחוץ האביב במלוא הדרו.
 
 
 
