--- a/index.html
+++ b/index.html
@@ -10925,13 +10925,13 @@ Is where I want to be
 &lt;&lt;englink [[Iry's Hawaiian pineapple house]]&gt;&gt;
 </pre>
 </div>
-<div created="20200420140758511" modified="20200420182153861" tags="[[כאן בגטו]] [[הלכות קורונה]] [[מטא בדיון]]" title="בלינדה">
+<div created="20200420140758511" modified="20200420192452442" tags="[[כאן בגטו]] [[הלכות קורונה]] [[מטא בדיון]]" title="בלינדה">
 <pre>[img[pictures/belinda.jpg]]
 
 
 !!![[תומר]]:
 
-הבוקר כשהלכתי לקנות לחם החלטתי שאם [[בלינדה|https://belinda.co.il/]] פתחה סוף סוף את החנות, אקנה לננו את הכפכפים המתוקים שרציתי לקנות לה כשהתחילה הקורונה, והיא הייתה פתוחה ושמחנו להיפגש ודיברנו קצת על המצב תוך כדי שבחרתי ושילמתי. 
+הבוקר כשהלכתי לקנות [[לחם|לחמים בקורונה]] החלטתי שאם [[בלינדה|https://belinda.co.il/]] כבר פתחה את החנות, אקנה לננו את הכפכפים המתוקים שרציתי לקנות לה כשהתחילה הקורונה, והיא הייתה פתוחה ושמחנו להיפגש ודיברנו קצת על המצב תוך כדי שבחרתי ושילמתי. 
 
 
 
