--- a/index.html
+++ b/index.html
@@ -16057,7 +16057,7 @@ We rise to play a greater part.
 
 </pre>
 </div>
-<div created="20200420172526029" modified="20200420182056451" tags="[[סיפורים אמיתיים]] [[האחיות בלות]]" title="מוזנח זה המטופח החדש">
+<div created="20200420172526029" modified="20200420193205568" tags="[[סיפורים אמיתיים]] [[האחיות בלות]] [[הלכות קורונה]]" title="מוזנח זה המטופח החדש">
 <pre>[img[pictures/muznach.jpg]]
 
 
