--- a/index.html
+++ b/index.html
@@ -9219,7 +9219,7 @@ Error message and password prompt
 <div created="20161026202658363" creator="b" modified="20161026202700307" modifier="b" title="$:/status/UserName">
 <pre></pre>
 </div>
-<div list="בלינדה [[מוזנח זה המטופח החדש]] [[האחיות כהן]]" title="$:/StoryList">
+<div list="[[מוזנח זה המטופח החדש]] בלינדה [[האחיות כהן]]" title="$:/StoryList">
 <pre></pre>
 </div>
 <div plugin-type="info" title="$:/temp/info-plugin" type="application/json">
@@ -16057,13 +16057,13 @@ We rise to play a greater part.
 
 </pre>
 </div>
-<div created="20200420172526029" modified="20200420193205568" tags="[[סיפורים אמיתיים]] [[האחיות בלות]] [[הלכות קורונה]]" title="מוזנח זה המטופח החדש">
+<div created="20200420172526029" modified="20200420193638474" tags="[[סיפורים אמיתיים]] [[האחיות בלות]] [[הלכות קורונה]]" title="מוזנח זה המטופח החדש">
 <pre>[img[pictures/muznach.jpg]]
 
 
 !!![[אימא של ג'אז]]:
 
-בקורונה הפסקתי לספור את השערות הכסופות המשתוללות, כי [[הספר|ככל הנראה]] סגור. גבות וכל השאר סגור. עכשיו צריכה לחכות פעימה או שתיים ואחרי שיפתחו את הפדיקור, אוכל לחדש את הכפכפים שקניתי אצל [[בלינדה]] 
+בקורונה הפסקתי לספור את השערות הכסופות המשתוללות, כי [[מני|ככל הנראה]] סגור. גבות וכל השאר סגור. עכשיו צריכה לחכות פעימה או שתיים ואחרי שיפתחו את הפדיקור, אוכל לחנוך את הכפכפים שקניתי אצל [[בלינדה]] 
 
 
 &lt;&lt;englink [[Untidy is the new well-groomed]]&gt;&gt;</pre>
