--- a/index.html
+++ b/index.html
@@ -9219,7 +9219,7 @@ Error message and password prompt
 <div created="20161026202658363" creator="b" modified="20161026202700307" modifier="b" title="$:/status/UserName">
 <pre></pre>
 </div>
-<div list="[[האחיות כהן]]" title="$:/StoryList">
+<div list="[[מוכרת הדיסקים/dj]] [[האחיות כהן]]" title="$:/StoryList">
 <pre></pre>
 </div>
 <div plugin-type="info" title="$:/temp/info-plugin" type="application/json">
@@ -9239,7 +9239,7 @@ Error message and password prompt
 <div created="20161026143719829" modified="20161026143722391" title="$:/temp/RemoteAssetSearch/$:/config/OfficialPluginLibrary">
 <pre>powered</pre>
 </div>
-<div created="20161023184814872" modified="20200421155730854" title="$:/temp/search">
+<div created="20161023184814872" modified="20200422162107520" title="$:/temp/search">
 <pre></pre>
 </div>
 <div created="20161026143331446" modified="20161026143331446" tags="$:/tags/ServerConnection" title="$:/temp/ServerConnection/http://tiddlywiki.com/library/v5.1.13/index.html" url="http://tiddlywiki.com/library/v5.1.13/index.html">
@@ -16068,7 +16068,7 @@ We rise to play a greater part.
 
 &lt;&lt;englink [[Untidy is the new well-groomed]]&gt;&gt;</pre>
 </div>
-<div created="20170318190608252" modified="20200308100044907" tags="HH מוזיקה [[כמה שירים כבר אפשר להמציא בכלל]]" title="מוכרת הדיסקים/dj">
+<div created="20170318190608252" modified="20200422162118032" tags="HH מוזיקה [[כמה שירים כבר אפשר להמציא בכלל]]" title="מוכרת הדיסקים/dj">
 <pre>[img[pictures/dj-eva.jpg]]
 
 !!![[גורה]]:
@@ -16079,7 +16079,7 @@ We rise to play a greater part.
 
 אווה הדיג'יי של הסידרה היא אישה בת שלושים ומשהו, מעט עצבנית, ששומרת על עצמה בכל מובן.
 
-היאת [[והספרית|הספרית]] הן המבוגרות האחראיות בסיפור.
+היא [[והספרית|הספרית]] הן המבוגרות האחראיות בסיפור.
 
 
 
