--- a/index.html
+++ b/index.html
@@ -9219,7 +9219,7 @@ Error message and password prompt
 <div created="20161026202658363" creator="b" modified="20161026202700307" modifier="b" title="$:/status/UserName">
 <pre></pre>
 </div>
-<div list="[[מוכרת הדיסקים/dj]] [[האחיות כהן]]" title="$:/StoryList">
+<div list="[[האחיות כהן]]" title="$:/StoryList">
 <pre></pre>
 </div>
 <div plugin-type="info" title="$:/temp/info-plugin" type="application/json">
@@ -16250,7 +16250,7 @@ We rise to play a greater part.
 
 </pre>
 </div>
-<div created="20200405102558367" modified="20200408125314455" tags="[[כאן בגטו]] [[חיות אוכל]] [[בדרך לאן שהוא]] [[הלכות קורונה]] מסעדות" title="מכולת האחים">
+<div created="20200405102558367" modified="20200422162318139" tags="[[כאן בגטו]] [[חיות אוכל]] [[בדרך לאן שהוא]] [[הלכות קורונה]] מסעדות" title="מכולת האחים">
 <pre>[img[pictures/makolet-haachim.jpg]]
 
 
