--- a/index.html
+++ b/index.html
@@ -9210,7 +9210,7 @@ Error message and password prompt
 <div created="20161023184709475" modified="20200330165057621" title="$:/state/tab/moresidebar-401116514">
 <pre>$:/core/ui/MoreSideBar/Missing</pre>
 </div>
-<div created="20161023184705203" modified="20200411144155362" title="$:/state/tab/sidebar--1835078512">
+<div created="20161023184705203" modified="20200422180348455" title="$:/state/tab/sidebar--1835078512">
 <pre>$:/core/ui/SideBar/Recent</pre>
 </div>
 <div created="20161024121419094" modified="20161024121426896" title="$:/state/tabs/controlpanel/toolbars-1345989671">
@@ -9219,7 +9219,7 @@ Error message and password prompt
 <div created="20161026202658363" creator="b" modified="20161026202700307" modifier="b" title="$:/status/UserName">
 <pre></pre>
 </div>
-<div list="[[האחיות כהן]]" title="$:/StoryList">
+<div list="[[עלי גפן]] [[האחיות כהן]]" title="$:/StoryList">
 <pre></pre>
 </div>
 <div plugin-type="info" title="$:/temp/info-plugin" type="application/json">
@@ -9239,7 +9239,7 @@ Error message and password prompt
 <div created="20161026143719829" modified="20161026143722391" title="$:/temp/RemoteAssetSearch/$:/config/OfficialPluginLibrary">
 <pre>powered</pre>
 </div>
-<div created="20161023184814872" modified="20200422162107520" title="$:/temp/search">
+<div created="20161023184814872" modified="20200422172317964" title="$:/temp/search">
 <pre></pre>
 </div>
 <div created="20161026143331446" modified="20161026143331446" tags="$:/tags/ServerConnection" title="$:/temp/ServerConnection/http://tiddlywiki.com/library/v5.1.13/index.html" url="http://tiddlywiki.com/library/v5.1.13/index.html">
@@ -17794,12 +17794,40 @@ __אופן ההכנה:__
 &lt;&lt;englink [[On the spectrum]]&gt;&gt;
 </pre>
 </div>
-<div created="20200417165302560" modified="20200418144813466" tags="מתכונים [[מתכונים טבעוניים]] [[הלכות קורונה]] [[כאן בגטו]] [[חיות אוכל]]" title="עלי גפן">
+<div created="20200417165302560" modified="20200422182747718" tags="מתכונים [[מתכונים טבעוניים]] [[הלכות קורונה]] [[כאן בגטו]] [[חיות אוכל]]" title="עלי גפן">
 <pre>[img[pictures/aley-gefen.jpg]]
 
 !!![[תומר]]:
 
-בעוד אנו סגורים בדירתנו בחוץ האביב במלוא הדרו.
+בעוד אנו סגורים בדירתנו, בחוץ האביב [[שוב צוהל|https://www.youtube.com/watch?v=Te-1uSxoNyg]], וכמה מאותותיו הגיעו אלינו מליקוטי הדוק של [[מכולת האחים]] - ההיילייט של הסגר הזה, כמו עלי הגפן הצעירים שמגיעים בחבילה של 250 גרם, ובציור נראים מתייבשים אחרי חליטה. עד כה הכנתי אותם שלוש פעמים, כך שאני עדיין מתאמן, וזה המתכון הנוכחי:
+
+*25 גרם עלי גפן צעירים
+*כוס אורז עגול 
+*4 עגבניות קטנות
+*בצל סגול בינוני
+*בצל לבן בינוני
+*כף גדושה מחית חומץ רימונים
+*מיץ מחצי לימון
+*כפית מלח ים גס
+*ליטר מים רותחים
+
+1. מניחים את העלים (שהגיעו נקיים ויפים) בקערה גדולה, ומכסים אותם בעדינות במים רותחים. נותנים לעלים לשרות במים כעשרים דקות, מסננים את המים ומניחים אותם על הקערה ההפוכה אחד אחד בעדינות, כשהחלק המחוספס כלפי מעלה. את הפחות יפים מניחים בצד - הם ישמשו בהמשך לריפוד הסיר.
+
+2. מערבבים בקערה כוס אורז עגול ששרה חצי שעה במים קרים, נשטף וסונן ועגבניה קטנה קצוצה קטן קטן.
+
+3. מרפדים סיר בינוני (ואני אוהב את הנמוכים יותר) בעלי הגפן הפחות יפים (10-15 עלים), מעליהם מסדרים פרוסות משלוש עגבניות ופרוסות מבצל אחד לבן ובצל אחד סגול. על כל אלה נניח בהמשך את עלי הגפן המגולגלים.
+
+4. בשלב הזה או לפניו אפשר להפעיל את רשימת השמע שהאחים היקרים שלחו לנו ולאט ובסבלנות לגלגל אותם אחד אחד:
+
+*מניחים עלה על קרש חיתוך עם החלק המחוספס כלפי מעלה, והטוסיק עם הפנים אלינו
+*בעזרת סכין כותמים את הפטוטרת 
+*מניחים כפית בערך מהאורז לרוחב העלה
+*מגלגלים מהחלק התחתון כלפי מעלה גלגול וחצי שניים, ומתחילים להכניס פנימה את צידי העלה, ממשיכים לגלגל תוך כדי שמכניסים את צידי העלה פנימה עד שהעלה מגולגל כולו וסגור מהצדדים. נוח יותר לעבוד עם עלים גדולים, הקטנים יכולים לשמש לריפוד הסיר או כפלסטר לאלה שיצאו פחות יפים. 
+*מניחים את העלה הממולא בסיר, ובהמשך מניחים את השאר צמודים זה לצד זה, מהמעגל החיצוני של הסיר פנימה. מכמות העלים הזו יוצאים 40-45 ממולאים, כלומר שכבה אחת.
+*ממלאים בכד מדידה ליטר מים רותחים, מוסיפים פנימה כף ממרח רימונים, מיץ מחצי לימון וכפית מלח ים גס ומערבבים עד שהנוזל אחיד
+*מוזגים בעדינות ומגובה נמוך את המים עד כיסוי עלי הגפן. מניחים על העלים צלחת הפוכה שמא יצופו, ומבשלים על אש נמוכה שלוש שעות
+*בזמן הבישול בודקים מידי פעם מה נשמע בסיר והאם יש מספיק מים. אם אין מספיק מוסיפים מעט כל פעם
+*לאחר כיבוי הלהבה, נותנים לסיר להתקרר קצת, מסירים את הצלחת ומזליפים שמן זית ועוד כמה גרגרי מלח ים ס על הכל, וזה מוכן
 
 
 
