--- a/index.html
+++ b/index.html
@@ -17794,12 +17794,12 @@ __אופן ההכנה:__
 &lt;&lt;englink [[On the spectrum]]&gt;&gt;
 </pre>
 </div>
-<div created="20200417165302560" modified="20200422182747718" tags="מתכונים [[מתכונים טבעוניים]] [[הלכות קורונה]] [[כאן בגטו]] [[חיות אוכל]]" title="עלי גפן">
+<div created="20200417165302560" modified="20200422183020283" tags="מתכונים [[מתכונים טבעוניים]] [[הלכות קורונה]] [[כאן בגטו]] [[חיות אוכל]]" title="עלי גפן">
 <pre>[img[pictures/aley-gefen.jpg]]
 
 !!![[תומר]]:
 
-בעוד אנו סגורים בדירתנו, בחוץ האביב [[שוב צוהל|https://www.youtube.com/watch?v=Te-1uSxoNyg]], וכמה מאותותיו הגיעו אלינו מליקוטי הדוק של [[מכולת האחים]] - ההיילייט של הסגר הזה, כמו עלי הגפן הצעירים שמגיעים בחבילה של 250 גרם, ובציור נראים מתייבשים אחרי חליטה. עד כה הכנתי אותם שלוש פעמים, כך שאני עדיין מתאמן, וזה המתכון הנוכחי:
+בעוד אנו סגורים בדירתנו, בחוץ האביב [[שוב צוהל|https://www.youtube.com/watch?v=Te-1uSxoNyg]], וכמה מאותותיו הגיעו אלינו תודות לליקוטי הדוק של [[מכולת האחים]] - ההיילייט של הסגר הזה, כמו עלי הגפן הצעירים שמגיעים בחבילה של 250 גרם, ובציור נראים מתייבשים אחרי חליטה. עד כה הכנתי אותם שלוש פעמים, כך שאני עדיין מתאמן, וזה המתכון הנוכחי:
 
 *25 גרם עלי גפן צעירים
 *כוס אורז עגול 
