translations to eng

--- a/english.html
+++ b/english.html
@@ -867,9 +867,9 @@ Error message and password prompt
 
 <li>Pele Ozen</li>
 
-<li>Philip Seymour Hoffman</li>
+<li>Philip</li>
 
-<li>Philipp</li>
+<li>Philip Seymour Hoffman</li>
 
 <li>Pickles</li>
 
@@ -9094,10 +9094,10 @@ Error message and password prompt
 <div created="20161023185356606" modified="20180915084635446" title="$:/state/tab-1749438307">
 <pre>$:/core/ui/ControlPanel/Info</pre>
 </div>
-<div created="20161023184709475" modified="20200331152527812" title="$:/state/tab/moresidebar-401116514">
+<div created="20161023184709475" modified="20200422203348199" title="$:/state/tab/moresidebar-401116514">
 <pre>$:/core/ui/MoreSideBar/Missing</pre>
 </div>
-<div created="20161023184705203" modified="20200420193839959" title="$:/state/tab/sidebar--1835078512">
+<div created="20161023184705203" modified="20200422211354236" title="$:/state/tab/sidebar--1835078512">
 <pre>$:/core/ui/SideBar/Recent</pre>
 </div>
 <div created="20161024121419094" modified="20161024121426896" title="$:/state/tabs/controlpanel/toolbars-1345989671">
@@ -9106,7 +9106,7 @@ Error message and password prompt
 <div created="20161026202658363" creator="b" modified="20161026202700307" modifier="b" title="$:/status/UserName">
 <pre></pre>
 </div>
-<div list="[[Coen Sisters]]" title="$:/StoryList">
+<div list="[[Pele Ozen]] [[Coen Sisters]]" title="$:/StoryList">
 <pre></pre>
 </div>
 <div plugin-type="info" title="$:/temp/info-plugin" type="application/json">
@@ -9126,7 +9126,7 @@ Error message and password prompt
 <div created="20161026143719829" modified="20161026143722391" title="$:/temp/RemoteAssetSearch/$:/config/OfficialPluginLibrary">
 <pre>powered</pre>
 </div>
-<div created="20161023184814872" modified="20200421134456537" title="$:/temp/search">
+<div created="20161023184814872" modified="20200422210942464" title="$:/temp/search">
 <pre></pre>
 </div>
 <div created="20161026143331446" modified="20161026143331446" tags="$:/tags/ServerConnection" title="$:/temp/ServerConnection/http://tiddlywiki.com/library/v5.1.13/index.html" url="http://tiddlywiki.com/library/v5.1.13/index.html">
@@ -9732,10 +9732,14 @@ Beautiful Ahal is the beautiful [[Ahal Eden|https://www.instagram.com/ahaleden/]
 
  &lt;&lt;heblink [[רוטב בשאמל]]&gt;&gt;</pre>
 </div>
-<div created="20200420141235022" modified="20200420142037825" tags="[[Here in the Ghetto]] [[Corona beings]]" title="Belinda">
+<div created="20200420141235022" modified="20200422203332321" tags="[[Here in the Ghetto]] [[Corona beings]]" title="Belinda">
 <pre>
 [img[pictures/belinda.jpg]]
 
+
+!!![[Tomer]]:
+
+This morning, while I went out to buy [[bread|Lehamim and corona]], I decided that if [[Belinda|https://belinda.co.il/]] had opened the store, I would buy Nano the cute flip flops I wanted to buy her when the Corona had started, and she was open and we were happy to see each other and we discussed what's going on while I picked and paid.
 
 
 
@@ -10645,9 +10649,16 @@ This is [[Sweet David Byrne|http://davidbyrne.com/]].
 
  &lt;&lt;heblink [[כלים בכיור]]&gt;&gt;</pre>
 </div>
-<div created="20200308095722727" modified="20200308095903570" tags="HH Music [[How many songs can you even invent at all]]" title="DJ and discs dudet">
+<div created="20200308095722727" modified="20200422203643743" tags="HH Music [[How many songs can you even invent at all]] [[The archive's trustees]]" title="DJ and discs dudet">
 <pre>[img[pictures/dj-eva.jpg]]
 
+
+!!![[Gura]]:
+
+Yes, the DJ is also named Eva. Even though we might change her name out of exaggeration sensation.
+A little while before [[Yoyo]] and I wrote HAPPY HOUR, the whole thing with Eva Coen and the Coen sisters started, and for now we're uploading to this wiki what we have done pretty much as it is.
+Eva the DJ of the series is a-thirty-something-year-old woman, a little cranky, who looks after herself in every way.
+She and the hairdresser are the responsible adults in this story.  
 
 
 
@@ -12129,7 +12140,7 @@ From bitter searching of the heart, Quickened with passion and with pain We rise
  &lt;&lt;heblink [[לאונרד כהן]]&gt;&gt;
 </pre>
 </div>
-<div created="20200215225741395" modified="20200406161654159" tags="Kitchens [[The kitchen by Genevieve]]" title="Less is more">
+<div created="20200215225741395" modified="20200422204239419" tags="Kitchens [[The kitchen by Genevieve]]" title="Less is more">
 <pre>[img[pictures/less-is-more.jpg]]
 
 !!![[Genevieve]]:
@@ -12142,7 +12153,7 @@ Well,
 
 It could go pretty wrong, your food- if you don't pay attention to what's suitable and how much of it.
 
-We were guests of [[Eva|Eva Cohen]] and [[Philipp]] this week, and there was a cake that Eva was embarrassed of me trying, &quot;because I've put all the nuts that stayed in the can instead of just a handful, and I knew it was wrong, and I did it&quot;, she apologized, and also made [[cookies|Lemon cookies]] and a [[pie|Nectarine pie]]. 
+We were guests of [[Eva|Eva Cohen]] and [[Philip]] this week, and there was a cake that Eva was embarrassed of me trying, &quot;because I've put all the nuts that stayed in the can instead of just a handful, and I knew it was wrong, and I did it&quot;, she apologized, and also made [[cookies|Lemon cookies]] and a [[pie|Nectarine pie]]. 
 
 [[The cake|Torte]] itself with the cinnamon and the maple was still tasty and sweet in the right way, but it's true that a long chewing process was involved in eating it, and the nuts took over, but I still ate more of it.
 
@@ -13195,16 +13206,48 @@ I’ve tried to paint Pedro Almodóva from [[this photo|https://www.indiewire.co
 
 </pre>
 </div>
-<div created="20200223145445131" modified="20200223145651152" tags="Music [[Here in the Ghetto]] [[Outer sisters]]" title="Pele Ozen">
+<div created="20200223145445131" modified="20200422211846307" tags="Music [[Here in the Ghetto]] [[Outer sisters]]" title="Pele Ozen">
 <pre>[img[pictures/pele-ozen.jpg]]
 
 
+!!![[The team]]:
+
+[[Wonder boys|http://coensisters.org/pictures/pele-ozen-beit-alpha.jpg]] who sing on the skate and the mike is clear and loud. [[We can't drop our guard|https://www.youtube.com/watch?v=HxdcYPaNIX0]], while looking after others and [[ourselves|On the spectrum]]. With [[groovy beats and fun groove|https://www.youtube.com/watch?v=9OlAf4fCv0Q]] you can trip with them and learn that [[things can turn out fine|https://www.youtube.com/watch?v=WPwFRyCuWpI]]. We're in the apartment fell in love with them.
+
+[[This is|https://www.youtube.com/watch?v=khMjy6gJIog]] from the new album- November 2018.
+
+[[Cuz spreading the light is not a crime|https://www.youtube.com/watch?v=Z2mJLm8aUiI]]
 
 
 
 
  &lt;&lt;heblink [[פלא אוזן]]&gt;&gt;
 
+</pre>
+</div>
+<div created="20200212172521280" modified="20200422205113387" tags="[[Coen sister]]" title="Philip">
+<pre>[img[pictures/phillip.jpg]]
+
+
+!!![[Gura]]:
+
+Our Phillip.
+
+I mainly tried to show the doctor's magnificent fro, which grows out of his tall heart-shaped forehead, and his great face, and his wise profound gaze.
+
+He was my shrink, and when [[Yoyo]] came to Paris, we went together.
+
+Our souls are tied together and after my injury we became closer.
+
+At [[Christmas dinner]] he met [[Eva|Eva Cohen]], which he knew for many years, and in fact they've loved each other all those years.
+
+He has two grown up sons, he himself is over sixty, and he lost his wife a couple of years ago.
+
+Today, as everybody knows, [[we're|Coen Sisters]] one big [[happy family|Autarky]].
+
+
+
+ &lt;&lt;heblink [[פיליפ]]&gt;&gt;
 </pre>
 </div>
 <div created="20200218184450279" modified="20200324171822971" tags="[[Outer sisters]] Films [[Hunky Dory]]" title="Philip Seymour Hoffman">
@@ -13220,12 +13263,6 @@ Love him as a sister,
 
  &lt;&lt;heblink [[פיליפ סימור הופמן]]&gt;&gt;
 
-</pre>
-</div>
-<div created="20200212172521280" modified="20200216144216938" tags="[[Coen sister]]" title="Philipp">
-<pre>[img[pictures/phillip.jpg]]
-
- &lt;&lt;heblink [[פיליפ]]&gt;&gt;
 </pre>
 </div>
 <div created="20200306150957171" modified="20200306151110046" tags="Recipes [[Vegan recipes]] [[Christmas dinner Recipes]]" title="Pickles">
@@ -13713,8 +13750,39 @@ Everything will be clarified''
  &lt;&lt;heblink [[שלום]]&gt;&gt;
 </pre>
 </div>
-<div created="20200225182640202" modified="20200324172131582" tags="[[Outer sisters]] Music [[How many songs can you even invent at all]] [[Hunky Dory]]" title="Shalom Hanoch">
+<div created="20200225182640202" modified="20200422210108256" tags="[[Outer sisters]] Music [[How many songs can you even invent at all]] [[Hunky Dory]]" title="Shalom Hanoch">
 <pre>[img[pictures/shalom-chanoch.jpg]]
+
+
+!!![[Yoyo]]:
+
+By [[this picture|https://www.ynet.co.il/PicServer2/24012010/2389758/_DSC0020_wa.jpg]] [[Gura]] painted the [[sweetheart|https://en.wikipedia.org/wiki/Shalom_Hanoch]], who is beautiful words and melodies, warm voice, full of soothing love and goodness.
+For instance:
+
+[[Cause my song is a leaf in the wind|https://www.youtube.com/watch?v=0QhM-_h3Yg8]]
+
+[[Clocks|https://www.youtube.com/watch?v=P97ASmkE2Rs]]
+
+[[On this earth|https://www.youtube.com/watch?v=HoaaKznBmK0]]
+
+[[A man lives in himself|https://www.youtube.com/watch?v=vjEbQr56ty4]]
+
+[[Can't sleep right now|https://www.youtube.com/watch?v=iMHxzmiMCzU]]
+
+[[Here comes the sun|https://www.youtube.com/watch?v=j1YAMfeT-s8]]
+
+[[A trip to Jaffa|https://www.youtube.com/watch?v=rV9emtkpO5w]]
+
+[[I don't know how to tell you|https://www.youtube.com/watch?v=oq-wSaSh-Do]]
+
+[[You bring everything|https://www.youtube.com/watch?v=JSYt63blLJ0]]
+
+//( nothing is ever as it seems, maybe this way to nowhere leads )
+//
+
+
+[[In this metamorphosis|https://www.youtube.com/watch?v=KS25hjyFC9c]]////
+
 
 
  &lt;&lt;heblink [[שלום חנוך]]&gt;&gt;
@@ -14279,10 +14347,10 @@ I've come to the conclusion that I need to be ready for the nice enlightened veh
 
 </pre>
 </div>
-<div created="20200202171450477" modified="20200216144027375" tags="[[Monkeys with car keys]]" title="The first assembly">
+<div created="20200202171450477" modified="20200422204300101" tags="[[Monkeys with car keys]]" title="The first assembly">
 <pre>[img[pictures/asefot.jpg]]
 
-!!![[Philipp]]:
+!!![[Philip]]:
 
 Our first assembly was at the [[monometallic Christmas dinner|Christmas dinner]] that took place in December 2015, and since then we see each other all the time. The youngsters actually work together, and I come or show up to family's dinners and such.  
 A week ago (meaning more than a year after that Christmas dinner), it was the first time since then, that Yoyo asked us all to come, and everybody except [[Dandan who went|Dandan went]], came, including [[Iris|Iris the daughter]], the daughter of my beloved Eva. 
@@ -14949,10 +15017,14 @@ After searching for a while, there comes a time when [[Leonard|https://www.imdb.
  &lt;&lt;heblink [[אוטו מטריה]]&gt;&gt;
 </pre>
 </div>
-<div created="20200420173740515" modified="20200420193240317" tags="[[Menopause sisters]] [[True stories]] [[Corona beings]]" title="Untidy is the new well-groomed">
+<div created="20200420173740515" modified="20200422202909541" tags="[[Menopause sisters]] [[True stories]] [[Corona beings]]" title="Untidy is the new well-groomed">
 <pre>
 [img[pictures/muznach.jpg]]
 
+!!![[Jazz's mom]]:
+
+
+At Corona I stopped counting my gray hairs, who went wild cause [[Meni|Kehol Haniree]] is closed. Eyebrows and everything else is closed too. Now we have to wait for a bit or two, and after the pedicure will reopen, I'll proudly wear the new flip flops I bought at [[Belinda]] for the first time.  
 
 
 
@@ -15044,9 +15116,12 @@ Only in the taxi on the way back to the airport, the driver, who figured we live
  &lt;&lt;heblink [[נסענו לאזכרה של אימא]]&gt;&gt;
 </pre>
 </div>
-<div created="20200226091329887" modified="20200226091546946" tags="Mothers Children [[Coen sister]] [[The team]] [[Single parent children]]" title="We were born">
+<div created="20200226091329887" modified="20200422204442921" tags="Mothers Children [[Coen sister]] [[The team]] [[Single parent children]]" title="We were born">
 <pre>[img[pictures/noladnu.jpg]]
 
+
+
+We were born [[here|Exile]], between 1955 and 2000. Four of us belong to the baby boomers, five belong to generation X, more than half to generation Y, and three belong to [[generation Z|Mental generation]]. [[Philip]] is the oldest and [[Rushell]] is our youngest.
 
 
  &lt;&lt;heblink [[נולדנו]]&gt;&gt;</pre>
