--- a/index.html
+++ b/index.html
@@ -9219,7 +9219,7 @@ Error message and password prompt
 <div created="20161026202658363" creator="b" modified="20161026202700307" modifier="b" title="$:/status/UserName">
 <pre></pre>
 </div>
-<div list="[[עלי גפן]] [[האחיות כהן]]" title="$:/StoryList">
+<div list="נולדנו [[האחיות כהן]]" title="$:/StoryList">
 <pre></pre>
 </div>
 <div plugin-type="info" title="$:/temp/info-plugin" type="application/json">
@@ -9239,7 +9239,7 @@ Error message and password prompt
 <div created="20161026143719829" modified="20161026143722391" title="$:/temp/RemoteAssetSearch/$:/config/OfficialPluginLibrary">
 <pre>powered</pre>
 </div>
-<div created="20161023184814872" modified="20200422172317964" title="$:/temp/search">
+<div created="20161023184814872" modified="20200422203744545" title="$:/temp/search">
 <pre></pre>
 </div>
 <div created="20161026143331446" modified="20161026143331446" tags="$:/tags/ServerConnection" title="$:/temp/ServerConnection/http://tiddlywiki.com/library/v5.1.13/index.html" url="http://tiddlywiki.com/library/v5.1.13/index.html">
@@ -16750,12 +16750,12 @@ We rise to play a greater part.
 
 </pre>
 </div>
-<div created="20180202172446720" modified="20200226091712703" tags="[[אחות כהן]] הצוות אימהות ילדים" title="נולדנו">
+<div created="20180202172446720" modified="20200422204527342" tags="[[אחות כהן]] הצוות אימהות ילדים" title="נולדנו">
 <pre>[img[pictures/noladnu.jpg]]
 
 
 [[נולדנו|https://www.youtube.com/watch?v=Or-dVWZzS7Q]] כולנו [[כאן|גלות]] בין 1955 ל-2000.
-ארבעה מאיתנו שייכים לדור הבייבי בום, חמישה לדור ה-X, יותר ממחצית לדור ה-Y ו 3 לדור ה-Z. פיליפ הוא המבוגר ביותר וראשל היא בתנו הקטנה.
+ארבעה מאיתנו שייכים לדור הבייבי בום, חמישה לדור ה-X, יותר ממחצית לדור ה-Y ו 3 לדור ה-Z. [[פיליפ]] הוא המבוגר ביותר [[וראשל|ראשל]] היא בתנו הקטנה.
 
 
 
@@ -18489,7 +18489,7 @@ __אופן ההכנה____
 
 &lt;&lt;englink [[Chicken pate]]&gt;&gt;</pre>
 </div>
-<div created="20170401151233604" modified="20200216143717620" tags="[[אחות כהן]]" title="פיליפ">
+<div created="20170401151233604" modified="20200422204541900" tags="[[אחות כהן]]" title="פיליפ">
 <pre>[img[pictures/phillip.jpg]]
 
 !!![[גורה]]:
@@ -18509,7 +18509,7 @@ __אופן ההכנה____
 היום, כידוע, [[אנחנו|האחיות כהן]] משפחה אחת [[גדולה ושמחה|המשק האוטרקי שלנו]].
 
 
-&lt;&lt;englink [[Philipp]]&gt;&gt;</pre>
+&lt;&lt;englink [[Philip]]&gt;&gt;</pre>
 </div>
 <div created="20170417192958980" modified="20200324164719536" tags="[[אחיות חוץ]] סרטים סגירים [[האנקי דורי]]" title="פיליפ סימור הופמן">
 <pre>[img[pictures/Philip-Seymour-Hoffman.jpg]]
